[tool.poetry]
name        = "pyimportcheck"
version     = "0.0.2"
description = "Python circular import detector"
readme      = "README.md"
authors     = [
    "Yann MAGNIN <yann.magnin@protonmail.com>",
]
packages    = [
    { include = "pyimportcheck" },
]


[tool.poetry.scripts]
pyimportcheck = 'pyimportcheck._cli:pyimportcheck_cli_entry'


[tool.poetry.dependencies]
python  = ">=3.8.*"
click   = "8.1.*"

[tool.poetry.dev-dependencies]
pynvim  = "*"
pylint  = "*"
mypy    = "*"
