[tool.poetry]
name        = 'pyimportcheck'
version     = '0.0.4'
description = 'Python import checker'
readme      = 'README.md'
authors     = [
    'Yann MAGNIN <yann.magnin@protonmail.com>',
]
packages    = [
    { include = 'pyimportcheck' },
]


[tool.poetry.scripts]
pyimportcheck = 'pyimportcheck._cli:pyimportcheck_cli_entry'


[tool.poetry.dependencies]
python  = '>=3.8.*'
click   = '8.1.*'

[tool.poetry.dev-dependencies]
pynvim              = '*'
pylint              = '*'
mypy                = '*'
pytest              = '*'
pytest-dependency   = '*'
pytest-cov          = '*'



[tool.pytest.ini_options]
log_level = 'INFO'
addopts = '--ignore=tests/_data'
required_plugins = [
    'pytest-dependency',
    'pytest-cov',
]
python_functions = [
    'test_*',
]
python_files = '*.py'
testpaths = [
    'tests',
]
